Refactor header section in header.html
Updated the header structure and styles.

--- a/header.html
+++ b/header.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Header</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="margin:0; background-color:NavajoWhite; font-family:Arial;">
-  <h1 style="margin:20px 10px;">Cricket World</h1>
-  <p style="margin:0 10px;">Simple cricket information website</p>
+<body>
+
+<div class="header">
+  <h1>Cricket World</h1>
+  <p>All about the game we love</p>
+</div>
+
 </body>
 </html>
