Refactor menu layout and include stylesheet
Updated the menu structure and added a stylesheet link.

--- a/menu.html
+++ b/menu.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Menu</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="margin:0; background-color:BurlyWood; font-family:Arial;">
-  <div style="display:flex; justify-content:space-around; align-items:center; height:100%;">
-    <a href="home.html" target="contentFrame">Home</a>
-    <a href="login.html" target="contentFrame">Login</a>
-    <a href="registration.html" target="contentFrame">Registration</a>
-    <a href="catalogue.html" target="contentFrame">Catalogue</a>
-    <a href="cart.html" target="contentFrame">Cart</a>
-    <a href="contact.html" target="contentFrame">Contact Us</a>
-  </div>
+<body>
+
+<div class="menu">
+  <a href="home.html">Home</a>
+  <a href="login.html">Login</a>
+  <a href="teams.html">Teams</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="contact.html">Contact</a>
+</div>
+
 </body>
 </html>
