Refactor services.html structure and links

--- a/services.html
+++ b/services.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Services</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="margin:0; background-color:PapayaWhip; font-family:Arial;">
-  <h3 style="margin:10px;">Services</h3>
-  <ul style="margin-top:0;">
-    <li><a href="live_scores.html" target="contentFrame">Live Scores</a></li>
-    <li><a href="fixtures.html" target="contentFrame">Match Fixtures</a></li>
-    <li><a href="teams.html" target="contentFrame">Team Info</a></li>
-    <li><a href="rules.html" target="contentFrame">Cricket Rules</a></li>
-    <li><a href="gallery.html" target="contentFrame">Photo Gallery</a></li>
+<body>
+
+<div class="services">
+  <h3>Cricket Services</h3>
+  <ul>
+    <li><a href="home.html">Live Scores</a></li>
+    <li><a href="home.html">Match Fixtures</a></li>
+    <li><a href="teams.html">Team Information</a></li>
+    <li><a href="rules.html">Cricket Rules</a></li>
+    <li><a href="gallery.html">Photo Gallery</a></li>
   </ul>
+</div>
+
 </body>
 </html>
