--- a/home.html
+++ b/home.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home - Cricket</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="background-color:NavajoWhite; font-family:Arial; margin:10px;">
+<body>
+
+<div class="content">
   <h2>Welcome to Cricket World</h2>
-
-  <h3>Top 3 Teams (Example)</h3>
-  <ul>
-    <li>India</li>
-    <li>Australia</li>
-    <li>England</li>
-  </ul>
-
-  <h3>About Cricket</h3>
   <p>
-    Cricket is a bat-and-ball game played between two teams of eleven players.
-    The game is played on a field with a 22-yard pitch and a wicket at each end
-    (three stumps and two bails).
+    Cricket is more than just a sport. It brings people together
+    and creates moments that stay forever.
   </p>
+  <p>
+    From local grounds to international stadiums, the game is played
+    with passion, skill, and teamwork.
+  </p>
+</div>
 
-  <h3>Key Highlights</h3>
-  <ul>
-    <li><strong>Objective:</strong> Score more runs than the opponent.</li>
-    <li><strong>Teams:</strong> Two teams of 11 players (batting &amp; fielding).</li>
-    <li><strong>Pitch:</strong> 22-yard strip with a wicket at each end.</li>
-    <li><strong>Batting:</strong> Two batters try to score runs.</li>
-    <li><strong>Bowling:</strong> Bowlers try to get batters out.</li>
-    <li><strong>Scoring:</strong> Runs by running or hitting boundaries (4s and 6s).</li>
-  </ul>
 </body>
 </html>
