Update teams.html with cricket teams information
Added content about cricket teams and linked stylesheet.

--- a/teams.html
+++ b/teams.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Teams</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="background-color:NavajoWhite; font-family:Arial; margin:10px;">
-  <h2>Teams</h2>
-  <p>Information about international and domestic cricket teams.</p>
+<body>
+
+<div class="content">
+  <h2>Cricket Teams</h2>
+  <p>
+    Cricket is played by many countries across the world.
+    Each team brings its own style and strength to the game.
+  </p>
+  <p>
+    Some popular teams include India, Australia, England,
+    Pakistan, and South Africa.
+  </p>
+</div>
+
 </body>
 </html>
