--- a/rules.html
+++ b/rules.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cricket Rules</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="background-color:NavajoWhite; font-family:Arial; margin:10px;">
+<body>
+
+<div class="content">
   <h2>Basic Cricket Rules</h2>
-  <p>Short description of the main rules of cricket.</p>
+  <p>
+    Cricket is played between two teams of eleven players.
+    One team bats while the other team bowls and fields.
+  </p>
+  <p>
+    The main goal is to score more runs than the opponent.
+  </p>
+</div>
+
 </body>
 </html>
